get_related_documents function added

--- a/Covid19 challenge.ipynb
+++ b/Covid19 challenge.ipynb
@@ -753,25 +753,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('et', 123), ('al.', 123), ('SGs', 99), ('PBs', 85), ('protein', 55), ('stress', 38), ('Kedersha', 36), ('mRNAs', 34), ('translation', 29), ('mRNA', 23)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from collections import Counter\n",
-    "doc = tokenizer(df.iloc[16188][\"text\"])\n",
-    "query = tokenizer(\"Range of incubation periods for the disease in humans (and how this varies across age and health status) and how long individuals are contagious, even after recovery.\")\n",
-    "\n",
-    "word_freq = Counter(doc)\n",
-    "common_words = word_freq.most_common(10)\n",
-    "print (common_words)"
+    "doc = tokenizer(df.iloc[16188][\"text\"])"
    ]
   },
   {
@@ -809,22 +795,31 @@
    "outputs": [],
    "source": [
     "vectorizer = TfidfVectorizer()\n",
-    "vectors = vectorizer.fit_transform(df.text.to_numpy())\n"
+    "vectors = vectorizer.fit_transform(df.text.to_numpy())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_related_documents(query, k):\n",
+    "    query_tokenized = tokenizer(query)\n",
+    "    query_vec = vectorizer.transform([\" \".join(query_tokenized)])\n",
+    "    \n",
+    "    results = cosine_similarity(vectors,query_vec)\n",
+    "    results = results.flatten()\n",
+    "    \n",
+    "    doc_indexes = np.argsort(results)[::-1]\n",
+    "    return df.iloc[doc_indexes][:k]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 6050  6075 39430 ... 17296 17297 51077]\n",
-      "[0.20680865 0.20148916 0.19884039 ... 0.         0.         0.        ]\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -978,6 +973,50 @@
        "      <td>https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3...</td>\n",
        "      <td>Background: Accurate knowledge of incubation p...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2275</th>\n",
+       "      <td>13xmmin1</td>\n",
+       "      <td>24de65541e25ca372d5fb686b733b45a1dd5c0b6</td>\n",
+       "      <td>PMC</td>\n",
+       "      <td>Multiple Contact Dates and SARS Incubation Per...</td>\n",
+       "      <td>10.3201/eid1002.030426</td>\n",
+       "      <td>PMC3322923</td>\n",
+       "      <td>15030684.0</td>\n",
+       "      <td>no-cc</td>\n",
+       "      <td>Many severe acute respiratory syndrome (SARS) ...</td>\n",
+       "      <td>2004-02-10</td>\n",
+       "      <td>Meltzer, Martin I.</td>\n",
+       "      <td>Emerg Infect Dis</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>custom_license</td>\n",
+       "      <td>https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3...</td>\n",
+       "      <td>T he appearance and rapid spread of severe acu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15375</th>\n",
+       "      <td>4h9j9bw2</td>\n",
+       "      <td>f5d0016e273f4c10d43dff7ed9f4eaf3bcf7aa42</td>\n",
+       "      <td>PMC</td>\n",
+       "      <td>Refined Estimate of the Incubation Period of S...</td>\n",
+       "      <td>10.1093/aje/kwj034</td>\n",
+       "      <td>PMC7109871</td>\n",
+       "      <td>16339050.0</td>\n",
+       "      <td>no-cc</td>\n",
+       "      <td>Many epidemiologists have agreed that a refine...</td>\n",
+       "      <td>2006-02-01</td>\n",
+       "      <td>Cai, Quan-Cai; Xu, Qin-Feng; Xu, Jian-Ming; Gu...</td>\n",
+       "      <td>Am J Epidemiol</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>custom_license</td>\n",
+       "      <td>https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7...</td>\n",
+       "      <td>Many epidemiologists have agreed that a refine...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -989,6 +1028,8 @@
        "39430  iicbaevw  31e1b495e358bdfb9ac295b4e1cdd8052056499d; 3862...  Elsevier   \n",
        "15199  v24wsn04           c97de2b77c5593f9246815623b82f6c295c6d257       PMC   \n",
        "3692   553cjp9f           599f44a88bfd9fcd7cc5b03f3b0bf01c9b3c5ba8       PMC   \n",
+       "2275   13xmmin1           24de65541e25ca372d5fb686b733b45a1dd5c0b6       PMC   \n",
+       "15375  4h9j9bw2           f5d0016e273f4c10d43dff7ed9f4eaf3bcf7aa42       PMC   \n",
        "\n",
        "                                                   title  \\\n",
        "6050   Association between the Severity of Influenza ...   \n",
@@ -996,6 +1037,8 @@
        "39430  Incubation periods of acute respiratory viral ...   \n",
        "15199  Incubation Period of Shiga Toxin–Producing Esc...   \n",
        "3692   Incubation periods of viral gastroenteritis: a...   \n",
+       "2275   Multiple Contact Dates and SARS Incubation Per...   \n",
+       "15375  Refined Estimate of the Incubation Period of S...   \n",
        "\n",
        "                                 doi       pmcid   pubmed_id    license  \\\n",
        "6050    10.1371/journal.pone.0148506  PMC4757028  26885816.0      cc-by   \n",
@@ -1003,6 +1046,8 @@
        "39430  10.1016/s1473-3099(09)70069-6  PMC4327893  19393959.0  els-covid   \n",
        "15199          10.1093/epirev/mxz001  PMC7108491  31616910.0      no-cc   \n",
        "3692        10.1186/1471-2334-13-446  PMC3849296  24066865.0      cc-by   \n",
+       "2275          10.3201/eid1002.030426  PMC3322923  15030684.0      no-cc   \n",
+       "15375             10.1093/aje/kwj034  PMC7109871  16339050.0      no-cc   \n",
        "\n",
        "                                                abstract publish_time  \\\n",
        "6050   BACKGROUND: In early 2013, a novel avian-origi...   2016-02-17   \n",
@@ -1010,6 +1055,8 @@
        "39430  Summary Knowledge of the incubation period is ...   2009-05-31   \n",
        "15199  Shiga toxin–producing Escherichia coli are pat...   2019-10-16   \n",
        "3692   BACKGROUND: Accurate knowledge of incubation p...   2013-09-25   \n",
+       "2275   Many severe acute respiratory syndrome (SARS) ...   2004-02-10   \n",
+       "15375  Many epidemiologists have agreed that a refine...   2006-02-01   \n",
        "\n",
        "                                                 authors  \\\n",
        "6050   Virlogeux, Victor; Yang, Juan; Fang, Vicky J.;...   \n",
@@ -1017,6 +1064,8 @@
        "39430  Lessler, Justin; Reich, Nicholas G; Brookmeyer...   \n",
        "15199  Awofisayo-Okuyelu, Adedoyin; Brainard, Julii; ...   \n",
        "3692   Lee, Rachel M; Lessler, Justin; Lee, Rose A; R...   \n",
+       "2275                                  Meltzer, Martin I.   \n",
+       "15375  Cai, Quan-Cai; Xu, Qin-Feng; Xu, Jian-Ming; Gu...   \n",
        "\n",
        "                              journal  Microsoft Academic Paper ID  \\\n",
        "6050                         PLoS One                          NaN   \n",
@@ -1024,6 +1073,8 @@
        "39430  The Lancet Infectious Diseases                          NaN   \n",
        "15199                   Epidemiol Rev                          NaN   \n",
        "3692                   BMC Infect Dis                          NaN   \n",
+       "2275                 Emerg Infect Dis                          NaN   \n",
+       "15375                  Am J Epidemiol                          NaN   \n",
        "\n",
        "      WHO #Covidence  has_pdf_parse  has_pmc_xml_parse   full_text_file  \\\n",
        "6050             NaN           True               True  comm_use_subset   \n",
@@ -1031,6 +1082,8 @@
        "39430            NaN           True              False   custom_license   \n",
        "15199            NaN           True               True   custom_license   \n",
        "3692             NaN           True               True  comm_use_subset   \n",
+       "2275             NaN           True               True   custom_license   \n",
+       "15375            NaN           True               True   custom_license   \n",
        "\n",
        "                                                     url  \\\n",
        "6050   https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4...   \n",
@@ -1038,28 +1091,27 @@
        "39430      https://doi.org/10.1016/s1473-3099(09)70069-6   \n",
        "15199  https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7...   \n",
        "3692   https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3...   \n",
+       "2275   https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3...   \n",
+       "15375  https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7...   \n",
        "\n",
        "                                                    text  \n",
        "6050   In early 2013, a novel avian-origin influenza ...  \n",
        "6075   events cannot be directly observed. If patient...  \n",
        "39430  Knowledge of the incubation period is essentia...  \n",
        "15199  Shiga toxin-producing Escherichia coli are pat...  \n",
-       "3692   Background: Accurate knowledge of incubation p...  "
+       "3692   Background: Accurate knowledge of incubation p...  \n",
+       "2275   T he appearance and rapid spread of severe acu...  \n",
+       "15375  Many epidemiologists have agreed that a refine...  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query_vec = vectorizer.transform([\" \".join(query)])\n",
-    "results = cosine_similarity(vectors,query_vec)\n",
-    "results = results.flatten()\n",
-    "doc_indexes = np.argsort(results)[::-1]\n",
-    "print(doc_indexes)\n",
-    "print(results[doc_indexes])\n",
-    "df.iloc[doc_indexes][:5]"
+    "query = \"Range of incubation periods for the disease in humans (and how this varies across age and health status) and how long individuals are contagious, even after recovery.\"\n",
+    "get_related_documents(query, 5)"
    ]
   },
   {
