results for each query added

--- a/Covid19 challenge.ipynb
+++ b/Covid19 challenge.ipynb
@@ -1045,8 +1045,7 @@
     }
    ],
    "source": [
-    "query = \"Range of incubation periods for the disease in humans (and how this varies across age and health status) and how long individuals are contagious, even after recovery.\"\n",
-    "get_related_documents_tfidf(query, vectorizer, vectors, 3)"
+    "query = \"Range of incubation periods for the disease in humans (and how this varies across age and health status) and how long individuals are contagious, even after recovery.\"\n"
    ]
   },
   {
@@ -1289,7 +1288,9 @@
    "source": [
     "## Future Work\n",
     "\n",
-    "There are several things to improve"
+    "There are several things to improve\n",
+    "- larger model\n",
+    "- train on sentences to extract relevant passages"
    ]
   },
   {
@@ -1319,6 +1320,212 @@
     "          \"Effectiveness of movement control strategies to prevent secondary transmission in health care and community settings\",\n",
     "          \"Effectiveness of personal protective equipment (PPE) and its usefulness to reduce risk of transmission in health care and community settings\",\n",
     "          \"Role of the environment in transmission\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Range of incubation periods for the disease in humans (and how this varies across age and health status) and how long individuals are contagious, even after recovery\n",
+      "                                                   title\n",
+      "15375  Refined Estimate of the Incubation Period of S...\n",
+      "8400   Estimating the incubation period of hand, foot...\n",
+      "6050   Association between the Severity of Influenza ...\n",
+      "\n",
+      "Prevalence of asymptomatic shedding and transmission (e.g., particularly children)\n",
+      "                                                   title\n",
+      "28378  Chapter 17 Transmission of infectious diseases...\n",
+      "43810  Asymptomatic coronavirus infection: MERS-CoV a...\n",
+      "47101                          Breast milk and infection\n",
+      "\n",
+      "Seasonality of transmission\n",
+      "                                                   title\n",
+      "9882   The calendar of epidemics: Seasonal cycles of ...\n",
+      "28602  7 Pretravel Considerations for Non-vaccine-Pre...\n",
+      "41865  Impact of global warming on viral diseases: wh...\n",
+      "\n",
+      "Physical science of the coronavirus (e.g., charge distribution, adhesion to hydrophilic/phobic surfaces, environmental survival to inform decontamination efforts for affected areas and provide information about viral shedding)\n",
+      "                                                   title\n",
+      "10413  Bioaerosols and Transmission, a Diverse and Gr...\n",
+      "10608  Emerging infectious diseases and biological in...\n",
+      "928      Outdoor environments and human pathogens in air\n",
+      "\n",
+      "Persistence and stability on a multitude of substrates and sources (e.g., nasal discharge, sputum, urine, fecal matter, blood)\n",
+      "                                       title\n",
+      "29433  18 OVERVIEW AND DIAGNOSTIC PROCEDURES\n",
+      "38660              Rodent Diagnostic Testing\n",
+      "50075               Optimal fecal assessment\n",
+      "\n",
+      "Persistence of virus on surfaces of different materials (e,g., copper, stainless steel, plastic)\n",
+      "                                                   title\n",
+      "22645  The SARS coronavirus E protein interacts with ...\n",
+      "49131  Preparation and properties of hydroxyapatite f...\n",
+      "1280   Maintenance of influenza virus infectivity on ...\n",
+      "\n",
+      "Natural history of the virus and shedding of it from an infected person\n",
+      "                                                   title\n",
+      "49902  Zoonotic Viruses: The Mysterious Leap From Ani...\n",
+      "2306   Animal-to-Human SARS-associated Coronavirus Tr...\n",
+      "23205                   Bats and viruses: a brief review\n",
+      "\n",
+      "Implementation of diagnostics and products to improve clinical processes\n",
+      "                                                   title\n",
+      "46748  Assuring result quality: Emerging and biosecur...\n",
+      "50487  Role of the microbiology laboratory in infecti...\n",
+      "8722   Control of Infectious Diseases in the Era of E...\n",
+      "\n",
+      "Disease models, including animal models for infection, disease and transmission\n",
+      "                                                   title\n",
+      "10398  The development and application of Laboratory ...\n",
+      "45150  Animal models for highly pathogenic emerging v...\n",
+      "20794  Mathematical Modeling of Viral Zoonoses in Wil...\n",
+      "\n",
+      "Tools and studies to monitor phenotypic change and potential adaptation of the virus\n",
+      "                                                   title\n",
+      "14386  Identifying genetic markers of adaptation for ...\n",
+      "43317  Viral fitness: definitions, measurement, and c...\n",
+      "43618  Parallel molecular evolution and adaptation in...\n",
+      "\n",
+      "Immune response and immunity\n",
+      "                                                   title\n",
+      "14289  Not so fast: adaptive suppression of innate im...\n",
+      "41717  Innate immune activation as a broad-spectrum b...\n",
+      "31526  Do adaptive immune cells suppress or activate ...\n",
+      "\n",
+      "Effectiveness of movement control strategies to prevent secondary transmission in health care and community settings\n",
+      "                                                   title\n",
+      "5817   Implementation of Quaternary Prevention in the...\n",
+      "40525  Reflecting on the future of infection preventi...\n",
+      "12502  Responding to the COVID-19 pandemic in complex...\n",
+      "\n",
+      "Effectiveness of personal protective equipment (PPE) and its usefulness to reduce risk of transmission in health care and community settings\n",
+      "                                                   title\n",
+      "47087  Hazards of the Health Care Sector: Looking Bey...\n",
+      "22309  Occupational Hazards in the Thai Healthcare Se...\n",
+      "11349  Duty of care and health worker protections in ...\n",
+      "\n",
+      "Role of the environment in transmission\n",
+      "                                                   title\n",
+      "47340  Sustained fecal-oral human-to-human transmissi...\n",
+      "9882   The calendar of epidemics: Seasonal cycles of ...\n",
+      "1117   Public Health Threat of New, Reemerging, and N...\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in queries:\n",
+    "    print(i)\n",
+    "    print(get_related_documents_embeddings(i,doc_vectors, 3)[[\"title\"]])\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Range of incubation periods for the disease in humans (and how this varies across age and health status) and how long individuals are contagious, even after recovery\n",
+      "                                                   title\n",
+      "6050   Association between the Severity of Influenza ...\n",
+      "6075   Association between Severity of MERS-CoV Infec...\n",
+      "39430  Incubation periods of acute respiratory viral ...\n",
+      "\n",
+      "Prevalence of asymptomatic shedding and transmission (e.g., particularly children)\n",
+      "                                                   title\n",
+      "39510  INFECTION CONTROL CHALLENGES IN CHILD-CARE CEN...\n",
+      "43810  Asymptomatic coronavirus infection: MERS-CoV a...\n",
+      "50635  Outbreak of coinfection with human metapneumov...\n",
+      "\n",
+      "Seasonality of transmission\n",
+      "                                                   title\n",
+      "9882   The calendar of epidemics: Seasonal cycles of ...\n",
+      "12111  Long-term trends in seasonality of mortality i...\n",
+      "4813   Exploration of diarrhoea seasonality and its d...\n",
+      "\n",
+      "Physical science of the coronavirus (e.g., charge distribution, adhesion to hydrophilic/phobic surfaces, environmental survival to inform decontamination efforts for affected areas and provide information about viral shedding)\n",
+      "                                                   title\n",
+      "33849  N95 Mask Decontamination using Standard Hospit...\n",
+      "7252   Elimination of Porcine Epidemic Diarrhea Virus...\n",
+      "16469  Astrobiology Outreach and the Nature of Scienc...\n",
+      "\n",
+      "Persistence and stability on a multitude of substrates and sources (e.g., nasal discharge, sputum, urine, fecal matter, blood)\n",
+      "                                                   title\n",
+      "2476                  SARS Coronavirus Detection Methods\n",
+      "44151  Objective monitoring of nasal patency and nasa...\n",
+      "16093  SARS-CoV-2–Positive Sputum and Feces After Con...\n",
+      "\n",
+      "Persistence of virus on surfaces of different materials (e,g., copper, stainless steel, plastic)\n",
+      "                                                   title\n",
+      "5759   Human Coronavirus 229E Remains Infectious on C...\n",
+      "10186  Copper Alloy Touch Surfaces in Healthcare Faci...\n",
+      "30426  Testing for multiple bubbles in the copper pri...\n",
+      "\n",
+      "Natural history of the virus and shedding of it from an infected person\n",
+      "                                                   title\n",
+      "48701  Transmission of COVID-19 in the terminal stage...\n",
+      "34227                   Wuhan novel coronavirus 2019nCoV\n",
+      "7515   SheddomeDB: the ectodomain shedding database f...\n",
+      "\n",
+      "Implementation of diagnostics and products to improve clinical processes\n",
+      "                                                   title\n",
+      "3254   Fading vision: knowledge translation in the im...\n",
+      "10337  Importance of diagnostics in epidemic and pand...\n",
+      "49379  Standardisation and controls, why can’t we ove...\n",
+      "\n",
+      "Disease models, including animal models for infection, disease and transmission\n",
+      "                                                   title\n",
+      "33861  Comparing Metapopulation Dynamics of Infectiou...\n",
+      "5529   Model Selection and Evaluation Based on Emergi...\n",
+      "23592  Dynamical transmission model of MERS-CoV in tw...\n",
+      "\n",
+      "Tools and studies to monitor phenotypic change and potential adaptation of the virus\n",
+      "                                                   title\n",
+      "43618  Parallel molecular evolution and adaptation in...\n",
+      "14386  Identifying genetic markers of adaptation for ...\n",
+      "30366  Business transformation: Leadership, integrati...\n",
+      "\n",
+      "Immune response and immunity\n",
+      "                                                   title\n",
+      "33261  Using directed attenuation to enhance vaccine ...\n",
+      "14289  Not so fast: adaptive suppression of innate im...\n",
+      "41717  Innate immune activation as a broad-spectrum b...\n",
+      "\n",
+      "Effectiveness of movement control strategies to prevent secondary transmission in health care and community settings\n",
+      "                                                   title\n",
+      "46610  How African migrants in China cope with barrie...\n",
+      "45551  An evaluation of the policy on community healt...\n",
+      "40525  Reflecting on the future of infection preventi...\n",
+      "\n",
+      "Effectiveness of personal protective equipment (PPE) and its usefulness to reduce risk of transmission in health care and community settings\n",
+      "                                                   title\n",
+      "42914  Variation in health care worker removal of per...\n",
+      "32119  Ebola virus disease: The use of fluorescents a...\n",
+      "43563  Are You Covered? Safe Practices for the use of...\n",
+      "\n",
+      "Role of the environment in transmission\n",
+      "                                                   title\n",
+      "46906  Transmission routes of respiratory viruses amo...\n",
+      "47340  Sustained fecal-oral human-to-human transmissi...\n",
+      "22065  From superspreaders to disease hotspots: linki...\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in queries:\n",
+    "    print(i)\n",
+    "    print(get_related_documents_tfidf(i, vectorizer, vectors, 3)[[\"title\"]])\n",
+    "    print()"
    ]
   },
   {
