minor text changes

--- a/Covid19 challenge.ipynb
+++ b/Covid19 challenge.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cord-19 Challenge\n",
+    "# CORD-19 Challenge\n",
     "\n",
-    "### Finding relevant research papers to transmission, incubation, and environmental stability of Covid-19\n",
+    "### Finding relevant research papers to transmission, incubation, and environmental stability of COVID-19\n",
     "\n",
     "This notebook explores different approaches to finding relevant research papers to the transmission, incubation, and environmental stability of COVID-19. In this project, we used the provided COVID-19 Open Research Dataset containing 51k research papers related to COVID-19. We preprocess each document's title, abstract, and body sections by removing stop words, punctuations, and spaces. Lemmatization is also performed on each document to ensure all words are converted into its base form.\n",
     "\n",
     "To find relevant documents to a given query, we explore two different approaches. In the first approach, we use term frequency and inverse document frequency to calculate the weight for each term in each document. The weights for each term is also calculated for the preprocessed query. We can then calculate the cosine similarity between each document and query and present the documents with the highest cosine similarities.\n",
     "\n",
-    "In the second approach, we use a large model with precalculated word embedding’s for biomedical data. Using the word embedding we can calculate the document vectors by simply averaging over the word vectors of the document. Using a similar approach, we can also calculate the vector for the query. Similar to the previous approach, we can also calculate the cosine similarity between each document and query to find the relevant documents.\n",
+    "In the second approach, we use a large model with precalculated word embedding’s for biomedical data. Using the word embedding we can calculate the document vectors by simply averaging over the word vectors of the document. Using a similar approach, we can also calculate the vector for the preprocessed query. Given the query and document vectors, we can then calculate the cosine similarity between each document and query to find the relevant documents.\n",
     "\n",
     "\n"
    ]
@@ -1363,7 +1363,7 @@
    "source": [
     "## Future Work\n",
     "\n",
-    "To improve the performance of the search results in the word embedding approach, we can use a larger model to better capture the representation of each word. We can also use the above two approaches to find the individual sentences or passages that answer each query."
+    "To improve the accuracy of the search results in the word embedding approach, we can use a larger model to better capture the representation of each word. We can also use the above two approaches to find the individual sentences or passages that answer each query."
    ]
   },
   {
